cli/tests/testdata/bench/no_check.out
<<<<<<< HEAD
error: TypeError: Cannot read properties of undefined (reading 'fn')
=======
error: Uncaught TypeError: Cannot read properties of undefined (reading 'fn')
>>>>>>> 172e5f0a0 (1.38.5 (#21469))
Deno.bench();
     ^
    at [WILDCARD]
    at [WILDCARD]/bench/no_check.ts:1:6
<<<<<<< HEAD
This error was not caught from a benchmark and caused the bench runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

error: Bench failed
=======
>>>>>>> 172e5f0a0 (1.38.5 (#21469))
